--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "next-seo": "^6.4.0",
     "next-sitemap": "^4.2.3",
     "next-themes": "^0.2.1",
+    "pnpm": "^8.15.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.49.3",
